added navbar section

--- a/index.html
+++ b/index.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness website</title>
+    <link rel="stylesheet" href="styles/style.css">
 </head>
+
 <body>
-    
+    <header class="header-bg">
+        <!-- navbar section start -->
+        <!-- navbar section end -->
+        <nav class="navbar display-flex max-width">
+            <h3 class="logo logo-color">Fitness</h3>
+            <div>
+                <ul class="display-flex">
+                    <li><a class="home" href="">Home</a></li>
+                    <li><a href="">Sercive</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">About</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
+
 </body>
+
 </html>
