added footer section

--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 <body>
     <header class="header-bg">
         <!-- navbar section start -->
-        <!-- navbar section end -->
         <nav class="navbar display-flex max-width">
             <h3 class="logo logo-color">Fitness</h3>
-            <div>
+            <div class="nav-list-items">
                 <ul class="display-flex">
                     <li><a class="home" href="">Home</a></li>
                     <li><a href="">Sercive</a></li>
@@ -23,14 +22,62 @@
                 </ul>
             </div>
         </nav>
+        <!-- navbar section end -->
+
+        <!-- banner section start -->
+        <div class="banner max-width display-flex">
+            <div class="banner-content">
+                <h3 class="banner-title primary-color">Get body in <br> <span class="span-title">Shape</span> & stay
+                    <br> healthy</h3>
+                <p class="banner-des secondary-color">A huge selection of health and fitness content, healthy recipes
+                    and transformation stories to help you get fit and stay fit!</p>
+                <button class="primary-btn">Join Club Now</button>
+                <button class="primary-btn btn">Download App</button>
+            </div>
+
+            <div class="banner-img">
+                <img src="./images/images 2.png" alt="">
+                <div class="badge-1">500+ Free Workout Videos</div>
+                <div class="badge-2">350+ Video tutorial</div>
+            </div>
+        </div>
+        <!-- banner section end -->
     </header>
     <main>
 
     </main>
+
+
+    <!-- footer section start -->
     <footer>
-
+    <div class="footer-section display-flex max-width">
+      <div class="footer-first">
+        <h3 class=" logo logo-color">Fitness</h3>
+        <p class="secondary-color">
+          We believe fitness should be accessible to everyone, everywhere,
+          <br />regardless of income or access to a gym. With <br />hundreds
+          of professional workouts.
+        </p>
+      </div>
+      <div class="footer-second">
+        <h2 class="primary-color">Get Started</h2>
+        <p>Service</p>
+        <p>Contact Us</p>
+        <p>Affiliate Program</p>
+        <p>About Us</p>
+      </div>
+      <div class="footer-third">
+        <h2 class="primary-color">Get Started</h2>
+        <p>Fitness</p>
+        <p>Platform</p>
+        <p>Workout Libary</p>
+        <p>App Design</p>
+      </div>
+    </div>
+    <hr />
+    <p class="copy-right">All right reserved @Fitness 2024</p>
     </footer>
-
+    <!-- footer section end -->
 </body>
 
 </html>
