added meet our team section

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <div class="banner max-width display-flex">
             <div class="banner-content">
                 <h3 class="banner-title primary-color">Get body in <br> <span class="span-title">Shape</span> & stay
-                    <br> healthy</h3>
+                    <br> healthy
+                </h3>
                 <p class="banner-des secondary-color">A huge selection of health and fitness content, healthy recipes
                     and transformation stories to help you get fit and stay fit!</p>
                 <button class="primary-btn">Join Club Now</button>
@@ -45,37 +46,95 @@
     </header>
     <main>
 
+
+        <!-- meet our team section start -->
+        <section >
+            <div class="meet-our-team max-width">
+              <h2 class="primary-color">Meet Our Team</h2>
+              <p class="secondary-color">
+                We believe fitness should be accessible to everyone, everywhere,
+                regardless of income or <br />
+                access to a gym.
+              </p>
+              <div class="card-container max-width">
+                <div class="card-box">
+                  <img src="./images/trainer1.png" alt="" />
+                  <div class="card-content">
+                    <h3 class="card-title primary-color">Jerome Bell</h3>
+                    <p class="secondary-color">Trainer</p>
+                  </div>
+                </div>
+                <div class="card-box">
+                  <img src="./images/trainer2.png" alt="" />
+                  <div class="card-content">
+                    <h3 class="card-title primary-color">Cameron Willi</h3>
+                    <p class="secondary-color">Trainer</p>
+                  </div>
+                </div>
+                <div class="card-box">
+                  <img src="./images/trainer3.png" alt="" />
+                  <div class="card-content">
+                    <h3 class="card-title primary-color">Darrell Steward</h3>
+                    <p class="secondary-color">Trainer</p>
+                  </div>
+                </div>
+                <div class="card-box">
+                  <img src="./images/trainer4.png" alt="" />
+                  <div class="card-content">
+                    <h3 class="card-title primary-color">Dianne Russell</h3>
+                    <p class="secondary-color">Trainer</p>
+                  </div>
+                </div>
+                <div class="card-box">
+                  <img src="./images/trainer5.png" alt="" />
+                  <div class="card-content">
+                    <h3 class="card-title primary-color">Cody Fisher</h3>
+                    <p class="secondary-color">Trainer</p>
+                  </div>
+                </div>
+                <div class="card-box">
+                  <img src="./images/trainer6.png" alt="" />
+                  <div class="card-content">
+                    <h3 class="card-title primary-color">Theresa Webb</h3>
+                    <p class="secondary-color">Trainer</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+        <!-- meet our team section end -->
+
     </main>
 
 
     <!-- footer section start -->
     <footer>
-    <div class="footer-section display-flex max-width">
-      <div class="footer-first">
-        <h3 class=" logo logo-color">Fitness</h3>
-        <p class="secondary-color">
-          We believe fitness should be accessible to everyone, everywhere,
-          <br />regardless of income or access to a gym. With <br />hundreds
-          of professional workouts.
-        </p>
-      </div>
-      <div class="footer-second">
-        <h2 class="primary-color">Get Started</h2>
-        <p>Service</p>
-        <p>Contact Us</p>
-        <p>Affiliate Program</p>
-        <p>About Us</p>
-      </div>
-      <div class="footer-third">
-        <h2 class="primary-color">Get Started</h2>
-        <p>Fitness</p>
-        <p>Platform</p>
-        <p>Workout Libary</p>
-        <p>App Design</p>
-      </div>
-    </div>
-    <hr />
-    <p class="copy-right">All right reserved @Fitness 2024</p>
+        <div class="footer-section display-flex max-width">
+            <div class="footer-first">
+                <h3 class=" logo logo-color">Fitness</h3>
+                <p class="secondary-color">
+                    We believe fitness should be accessible to everyone, <br> everywhere,
+                    regardless of income or access to a gym. With <br />hundreds
+                    of professional workouts.
+                </p>
+            </div>
+            <div class="footer-second">
+                <h2 class="primary-color">Get Started</h2>
+                <p>Service</p>
+                <p>Contact Us</p>
+                <p>Affiliate Program</p>
+                <p>About Us</p>
+            </div>
+            <div class="footer-third">
+                <h2 class="primary-color">Get Started</h2>
+                <p>Fitness</p>
+                <p>Platform</p>
+                <p>Workout Libary</p>
+                <p>App Design</p>
+            </div>
+        </div>
+        <hr class=" horizontal max-width">
+        <p class="copy-right">All right reserved @Fitness 2024</p>
     </footer>
     <!-- footer section end -->
 </body>
