fix the meet our team section width

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 regardless of income or <br />
                 access to a gym.
               </p>
-              <div class="card-container max-width">
+              <div class="card-container">
                 <div class="card-box">
                   <img src="./images/trainer1.png" alt="" />
                   <div class="card-content">
