--- a/index.html
+++ b/index.html
@@ -46,62 +46,136 @@
     </header>
     <main>
 
+        <!-- bmi calculator section start -->
+        <section class="max-width">
+            <div class="display-flex bmi">
+                <div class="bmi-calculator ">
+                    <h2 class="bmi-title primary-color">BMI Calculator</h2>
+                    <p class="secondary-color">
+                        We believe fitness should be accessible to everyone, everywhere,
+                        regardless of income or <br />access to a gym.
+                    </p>
+                </div>
+            </div>
+        </section>
+
+
+        <section>
+            <div class="chart-container">
+                <div class="chart-content display-flex max-width">
+                    <div class="chart-column-left">
+                        <h4 class="primary-color">BMI Calculator Chart</h4>
+                        <table>
+                            <tr>
+                                <th class="primary-color">BMI</th>
+                                <th class="primary-color">Weight Status</th>
+                            </tr>
+                            <tr>
+                                <td>Below 18.5</td>
+                                <td>Underweight</td>
+                            </tr>
+                            <tr>
+                                <td>18.5 - 24.9</td>
+                                <td>Healthy</td>
+                            </tr>
+                            <tr>
+                                <td>25.0 - 29.9</td>
+                                <td>Overweight</td>
+                            </tr>
+                            <tr>
+                                <td>30.0 and Above</td>
+                                <td>Obese</td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div class="chart-column-right primary-color">
+                        <h4>Calculate your BMI</h4>
+                        <p class="secondary-color">
+                            We believe fitness should be accessible to everyone, everywhere,
+                            regardless of <br />
+                            income or access to a gym.
+                        </p>
+
+                        <form class="input-box" >
+                            <input type="number" id="height" name="height" placeholder="Height/cm" />
+
+                            <input type="number" id="weight" name="weight" placeholder="Weight/kg" />
+
+                            <input type="number" id="age" name="age" placeholder="Age" />
+
+                            <select id="sex" name="sex" placeholder="Sex">
+                                <option value="male">Male</option>
+                                <option value="female">Female</option>
+                            </select>
+
+                            <select class="activity-factor" name="activity-factor">
+                                <option value="sedentary">Select an activity factor</option>
+                            </select>
+
+                            <button class="primary-btn" type="submit">Calculate</button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- bmi calculator section end -->
+
 
         <!-- meet our team section start -->
-        <section >
+        <section>
             <div class="meet-our-team max-width">
-              <h2 class="primary-color">Meet Our Team</h2>
-              <p class="secondary-color">
-                We believe fitness should be accessible to everyone, everywhere,
-                regardless of income or <br />
-                access to a gym.
-              </p>
-              <div class="card-container">
-                <div class="card-box">
-                  <img src="./images/trainer1.png" alt="" />
-                  <div class="card-content">
-                    <h3 class="card-title primary-color">Jerome Bell</h3>
-                    <p class="secondary-color">Trainer</p>
-                  </div>
+                <h2 class="primary-color">Meet Our Team</h2>
+                <p class="secondary-color">
+                    We believe fitness should be accessible to everyone, everywhere,
+                    regardless of income or <br />
+                    access to a gym.
+                </p>
+                <div class="card-container">
+                    <div class="card-box">
+                        <img src="./images/trainer1.png" alt="" />
+                        <div class="card-content">
+                            <h3 class="card-title primary-color">Jerome Bell</h3>
+                            <p class="secondary-color">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="card-box">
+                        <img src="./images/trainer2.png" alt="" />
+                        <div class="card-content">
+                            <h3 class="card-title primary-color">Cameron Willi</h3>
+                            <p class="secondary-color">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="card-box">
+                        <img src="./images/trainer3.png" alt="" />
+                        <div class="card-content">
+                            <h3 class="card-title primary-color">Darrell Steward</h3>
+                            <p class="secondary-color">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="card-box">
+                        <img src="./images/trainer4.png" alt="" />
+                        <div class="card-content">
+                            <h3 class="card-title primary-color">Dianne Russell</h3>
+                            <p class="secondary-color">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="card-box">
+                        <img src="./images/trainer5.png" alt="" />
+                        <div class="card-content">
+                            <h3 class="card-title primary-color">Cody Fisher</h3>
+                            <p class="secondary-color">Trainer</p>
+                        </div>
+                    </div>
+                    <div class="card-box">
+                        <img src="./images/trainer6.png" alt="" />
+                        <div class="card-content">
+                            <h3 class="card-title primary-color">Theresa Webb</h3>
+                            <p class="secondary-color">Trainer</p>
+                        </div>
+                    </div>
                 </div>
-                <div class="card-box">
-                  <img src="./images/trainer2.png" alt="" />
-                  <div class="card-content">
-                    <h3 class="card-title primary-color">Cameron Willi</h3>
-                    <p class="secondary-color">Trainer</p>
-                  </div>
-                </div>
-                <div class="card-box">
-                  <img src="./images/trainer3.png" alt="" />
-                  <div class="card-content">
-                    <h3 class="card-title primary-color">Darrell Steward</h3>
-                    <p class="secondary-color">Trainer</p>
-                  </div>
-                </div>
-                <div class="card-box">
-                  <img src="./images/trainer4.png" alt="" />
-                  <div class="card-content">
-                    <h3 class="card-title primary-color">Dianne Russell</h3>
-                    <p class="secondary-color">Trainer</p>
-                  </div>
-                </div>
-                <div class="card-box">
-                  <img src="./images/trainer5.png" alt="" />
-                  <div class="card-content">
-                    <h3 class="card-title primary-color">Cody Fisher</h3>
-                    <p class="secondary-color">Trainer</p>
-                  </div>
-                </div>
-                <div class="card-box">
-                  <img src="./images/trainer6.png" alt="" />
-                  <div class="card-content">
-                    <h3 class="card-title primary-color">Theresa Webb</h3>
-                    <p class="secondary-color">Trainer</p>
-                  </div>
-                </div>
-              </div>
             </div>
-          </section>
+        </section>
         <!-- meet our team section end -->
 
     </main>
