--- a/index.html
+++ b/index.html
@@ -46,6 +46,25 @@
     </header>
     <main>
 
+        <!-- extra mile section start -->
+        <section class="extra-mile max-width primary-color">
+            <div class="extra-mile-container display-flex">
+                <div class="extra-mile-left">
+                    <h1 class="primary-color">Run an Extra <br />Mile Easily</h1>
+                    <p class="secondary-color">
+                        We believe fitness should be accessible to everyone, <br />
+                        everywhere, regardless of income or access to a gym. With
+                        <br />hundreds of professional workouts.
+                    </p>
+                    <button class="primary-btn">Join Now</button>
+                </div>
+                <div class="extra-mile-right">
+                    <img src="./images/run.jpg" alt="" />
+                </div>
+            </div>
+        </section>
+        <!-- extra mile section end -->
+
         <!-- bmi calculator section start -->
         <section class="max-width">
             <div class="display-flex bmi">
@@ -96,7 +115,7 @@
                             income or access to a gym.
                         </p>
 
-                        <form class="input-box" >
+                        <form class="input-box">
                             <input type="number" id="height" name="height" placeholder="Height/cm" />
 
                             <input type="number" id="weight" name="weight" placeholder="Weight/kg" />
