added change your habits section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,41 @@
     </header>
     <main>
 
+        <!-- change habits section start -->
+        <section class="change-habits max-width">
+            <h1 class="change-habit-title primary-color">Change Your Habits</h1>
+            <p class="secondary-color">
+                We believe fitness should be accessible to everyone, everywhere,
+                regardless of <br />
+                income or access to a gym.
+            </p>
+
+            <div class="habit-grides display-flex">
+                <div class="grid">
+                    <img src="./images/image 3.png" alt="" />
+                    <h4>Movement</h4>
+                    <p>We believe fitness should be <br />accessible to everyone</p>
+                </div>
+                <div class="grid">
+                    <img src="./images/image 2.png" alt="" />
+                    <h4>Time</h4>
+                    <p>We believe fitness should be <br />accessible to everyone</p>
+                </div>
+                <div class="grid">
+                    <img src="./images/image 4.png" alt="" />
+                    <h4>Weight Loss</h4>
+                    <p>We believe fitness should be <br />accessible to everyone</p>
+                </div>
+                <div class="grid">
+                    <img src="./images/image 5.png" alt="" />
+                    <h4>Movement</h4>
+                    <p>We believe fitness should be <br />accessible to everyone</p>
+                </div>
+            </div>
+        </section>
+        <!-- change habits section end -->
+
+
         <!-- extra mile section start -->
         <section class="extra-mile max-width primary-color">
             <div class="extra-mile-container display-flex">
