added banner section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness website</title>
+    <script src="https://kit.fontawesome.com/85976f3484.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -21,6 +22,9 @@
                     <li><a href="">About</a></li>
                 </ul>
             </div>
+            <div class="three-dot">
+                <i class="fa-solid fa-bars"></i>
+            </div>
         </nav>
         <!-- navbar section end -->
 
@@ -31,18 +35,25 @@
                     <br> healthy
                 </h3>
                 <p class="banner-des secondary-color">A huge selection of health and fitness content, healthy recipes
-                    and transformation stories to help you get fit and stay fit!</p>
+                    <br>
+                    and transformation stories to help you get fit and stay fit!
+                </p>
                 <button class="primary-btn">Join Club Now</button>
                 <button class="primary-btn btn">Download App</button>
             </div>
 
             <div class="banner-img">
                 <img src="./images/images 2.png" alt="">
-                <div class="badge-1">500+ Free Workout Videos</div>
-                <div class="badge-2">350+ Video tutorial</div>
+                <div class="badge-1 badge-box"><span class="five-plus">500+</span> <br><span class="para">Free Workout
+                        Videos</span></div>
+                <div class="badge-2 badge-box">
+                    <div class="circle"></div><span class="three-plus">350+</span> <br> <span class="para">Video
+                        tutorial</span>
+                </div>
             </div>
         </div>
         <!-- banner section end -->
+
     </header>
     <main>
 
