--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fitness website</title>
-    <script src="https://kit.fontawesome.com/85976f3484.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
@@ -25,12 +27,17 @@
             <div class="three-dot">
                 <i class="fa-solid fa-bars"></i>
             </div>
+
+            <!-- <div class="three-dot">
+                <i class="fa-solid fa-bars"></i>
+            </div> -->
         </nav>
         <!-- navbar section end -->
 
         <!-- banner section start -->
         <div class="banner max-width display-flex">
             <div class="banner-content">
+
                 <h3 class="banner-title primary-color">Get body in <br> <span class="span-title">Shape</span> & stay
                     <br> healthy
                 </h3>
@@ -44,8 +51,10 @@
 
             <div class="banner-img">
                 <img src="./images/images 2.png" alt="">
+
                 <div class="badge-1 badge-box"><span class="five-plus">500+</span> <br><span class="para">Free Workout
                         Videos</span></div>
+
                 <div class="badge-2 badge-box">
                     <div class="circle"></div><span class="three-plus">350+</span> <br> <span class="para">Video
                         tutorial</span>
