added meet our section some responsive

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     access to a gym.
                 </p>
                 <div class="card-container">
-                    <div class="card-box">
+                    <div class="card-box hidden">
                         <img src="./images/trainer1.png" alt="" />
                         <div class="card-content">
                             <h3 class="card-title primary-color">Jerome Bell</h3>
@@ -238,7 +238,7 @@
                             <p class="secondary-color">Trainer</p>
                         </div>
                     </div>
-                    <div class="card-box">
+                    <div class="card-box hidden">
                         <img src="./images/trainer4.png" alt="" />
                         <div class="card-content">
                             <h3 class="card-title primary-color">Dianne Russell</h3>
